fixes and check
